# WebServer

./: .gitignore  CMakeLists.txt
Frontend/html/: 400.html  403.html  404.html  405.html  error.html  index.html  login.html  picture.html  register.html  video.html  welcome.html
Frontend/html/assets/: index-BrbQADWk.js.map  login-BrbQADWk.js.map  main-BVFB52KA.css  main-BxTBCWAI.css  main-DYe8QlEX.js  main-DYe8QlEX.js.map  main-dbuCuXna.js  picture-BrbQADWk.js.map  register-BrbQADWk.js.map  video-BrbQADWk.js.map  welcome-BrbQADWk.js.map
Frontend/html/js/: httpClient.js
Frontend/vue-app/: .eslintrc.cjs  index.html  login.html  package-lock.json  package.json  picture.html  playwright.config.ts  register.html  tailwind.config.js  tsconfig.json  video.html  vite.config.ts  vitest.config.ts  welcome.html
Frontend/vue-app/e2e/: basic.spec.ts
Frontend/vue-app/scripts/: check-bundle.mjs  smoke-api.mjs
Frontend/vue-app/src/: App.vue  main.ts  style.css
Frontend/vue-app/test-results/: .last-run.json
api-docs/: Makefile  index.html  openapi.json  openapi.yaml  package-lock.json  package.json  postman-collection.json
api-docs/scripts/: generate.mjs
cppBackend/: CMakeLists.txt
cppBackend/MemoryPool/: DeferDeallocate.h  common.h  pageCache.cpp  pageCache.h  threadcache.cpp  threadcache.h
cppBackend/auth/jwt/: JwtUtil.cpp  JwtUtil.h
cppBackend/download/: readme.md
cppBackend/download/include/: ChunkedDownloadManager.h  DownloadTaskManager.h  FileHashUtil.h  SimpleHttpClient.h
cppBackend/download/src/: ChunkedDownloadManager.cpp  DownloadTaskManager.cpp  FileHashUtil.cpp  SimpleHttpClient.cpp
cppBackend/http/: CMakeLists.txt  后续的计划.txt  笔记：遇到的问题.txt
cppBackend/http/include/: HttpFacade.h
cppBackend/http/include/builder/: RequestBuilder.h  ResponseBuilder.h
cppBackend/http/include/core/: HttpRequest.h  HttpResponse.h  IHttpMessage.h
cppBackend/http/include/error/: HttpError.h  HttpErrorUtil.h
cppBackend/http/include/factory/: HttpParseFactory.h  ResponseFactory.h
cppBackend/http/include/handler/: AppHandlers.h  HandlerChain.h  IRequestHandler.h  ProtocolValidationHandler.h  SecurityValidationHandler.h
cppBackend/http/include/parsers/: Http1Parser.h  Http2Parser.h  IHttpParser.h
cppBackend/http/include/router/: Router.h
cppBackend/http/include/security/: RequestDeduplicator.h  RequestProtectionManager.h  RequestRateLimiter.h
cppBackend/http/include/ssl/: SslContext.h  SslHandler.h
cppBackend/http/include/util/: HttpHeadersUtil.h  HttpStringUtil.h
cppBackend/http/src/: CMakeLists.txt  HttpFacade.cpp
cppBackend/http/src/builder/: RequestBuilder.cpp  ResponseBuilder.cpp
cppBackend/http/src/core/: HttpRequest.cpp  HttpResponse.cpp
cppBackend/http/src/error/: HttpErrorUtil.cpp
cppBackend/http/src/factory/: ParseFactory.cpp  ResponseFactory.cpp
cppBackend/http/src/handler/: AppHandlers.cpp  HandlerChain.cpp  IRequestHandler.cpp  ProtocolValidationHandler.cpp  SecurityValidationHandler.cpp
cppBackend/http/src/parser/: Http1Parser.cpp  Http2Parser.cpp
cppBackend/http/src/router/: Router.cpp
cppBackend/http/src/security/: RequestDeduplicator.cpp  RequestProtectionManager.cpp  RequestRateLimiter.cpp
cppBackend/http/src/ssl/: SslContext.cpp  SslFactory.cpp  SslHandler.cpp
cppBackend/http/src/strategy/: ParseStrategy.cpp
cppBackend/logger/: lockfree_queue.h  log_console_output.cpp  log_console_output.h  log_fac.cpp  log_fac.h  log_file_output.cpp  log_file_output.h  log_format.h  log_output.h  logger.cpp  logger.h  user_format.cpp  user_format.h  xconfig.cpp  xconfig.h  xlog_format.cpp  xlog_format.h
cppBackend/mysql/: User.cpp  User.h  init_db.sql  sqlconnpool.cpp
cppBackend/mysql/dao/: UserDao.cpp  UserDao.h
cppBackend/mysql/entities/: UserEntity.h
cppBackend/reactor/: Acceptor.cpp  Acceptor.h  Buffer.h  CMakeLists.txt  Channel.cpp  Channel.h  Connection.cpp  Connection.h  Epoll.cpp  Epoll.h  Eventloop.cpp  HttpServer.cpp  HttpServer.h  RouteMetricsUtil.cpp  RouteMetricsUtil.h  Socket.cpp  Socket.h  ThreadPool.cpp  ThreadPool.h  TlsContext.cpp  TlsContext.h  TlsSession.cpp  TlsSession.h  main.cpp  readme.md  tcpserver.cpp
cppBackend/services/include/: AuthService.h  FileApiService.h  FileServeUtil.h  StaticFileService.h  UploadService.h
cppBackend/services/src/: AuthService.cpp  AuthServiceTest.cpp  DownloadService.cpp  FileApiService.cpp  FileServeUtil.cpp  StaticFileService.cpp  UploadService.cpp
cppBackend/timer/: TimeWheel.cpp  TimeWheel.h  heaptimer.cpp
cppBackend/views/include/: ForbiddenHandler.h  IPageHandler.h  NotFoundHandler.h  PicturePageHandler.h  RegisterPageHandler.h
cppBackend/views/src/: BadRequestHandler.cpp  MethodNotAllowedHandler.cpp  NotFoundHandler.cpp  PicturePageHandler.cpp  VideoPageHandler.cpp  WelcomePageHandler.cpp
docs/concurrency-review/: future-development-plan.md
http/: 后续的计划.txt
http/include/: HttpFacade.h
http/include/builder/: ResponseBuilder.h
http/include/handler/: AppHandlers.h  ProtocolValidationHandler.h  SecurityValidationHandler.h
http/include/observer/: IHttpObserver.h  LoggingObserver.h
http/include/parsers/: Http1Parser.h  Http2Parser.h  IHttpParser.h
http/include/router/: Router.h
http/include/ssl/: ISslHandler.h  SslFactory.h
http/include/strategy/: ParseStrategy.h
http/src/: CMakeLists.txt  HttpFacade.cpp  test.cpp
http/src/handler/: HandlerChain.cpp  (+2 more)
logger/: log_fac.cpp  log_output.h  logger.cpp  xconfig.cpp  xconfig.h
memory_pool/: centralCache.cpp
memory_pool2/: threadcache.cpp
mysql/: User.cpp
reactor/: Buffer.cpp  Buffer.h  Connection.cpp  HttpServer.cpp  HttpServer.h  tcpserver.h
services/include/: DownloadService.h
services/src/: AuthService.cpp  DownloadService.cpp
test/: http_server_parallel_tests.cpp
views/include/: BadRequestHandler.h  ErrorHandler.h  IndexPageHandler.h  LoginPageHandler.h  MethodNotAllowedHandler.h  VideoPageHandler.h  WelcomePageHandler.h
views/src/: ErrorHandler.cpp  ForbiddenHandler.cpp  IndexPageHandler.cpp  LoginPageHandler.cpp  MethodNotAllowedHandler.cpp  RegisterPageHandler.cpp
(+24 files in other folders)
